# growlio

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  dev.sh  docker-compose.override.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_provider_fields.py  003_add_manual_positions.py  004_add_transactions_and_deposit_goal.py  005_add_retirement_target_year.py  072c1f0d9e47_add_fee_and_alert_history.py  079ac4b72233_merge_notification_and_real_estate_heads.py  0df07d01b175_add_notification_email_to_user_settings.py  18bc774cd76e_merge_account_ids_and_per_account_kis.py  1b815a243623_add_monthly_deposit_amount.py  2142c5b6b44a_sync_model_indexes_with_db.py  314d148b8f35_add_goal_achievement_alerts_toggle.py  33a12f46ad9a_add_include_in_total_to_asset_accounts.py  36929c974b86_add_index_exchange_rate_alerts_user_id.py  51e994cacfd1_add_app_state_table.py  6ce0d285d1a8_add_goal_short_term_equity_floor_pct.py  6eafeed60ba3_add_password_reset_tokens_table.py  6efd01502c77_add_market_signal_daily_digest_toggle.py  717e507af8ab_add_rebalancing_alerts_active_mode_index.py  7936847f6b94_add_deposit_usd_to_asset_accounts.py  7d18503a7f06_add_market_to_rebalancing_plan_legs.py  84e57b6606a5_add_year_end_tax_reminder_enabled_to_.py  8ce6a6662752_add_deposit_krw_to_asset_accounts.py  9451f5d41bd5_add_dart_api_key_to_user_settings.py  9b35d2c773b1_add_auto_execution_time_to_rebalancing_.py  a1b2c3d4e5f6_add_user_ticker_settings.py  a2b3c4d5e6f7_per_account_kis_credentials.py  a64e36a53a40_add_indicator_subscriptions.py  a8b9c0d1e2f3_add_real_estate_details.py  aa1_add_composite_indexes.py  aa1_drop_securities_table.py  aa2_add_snapshots_user_date_index.py  aa2_positions_indexes.py  aa3_transaction_dividend_unique.py  ab1_add_data_source_and_account_type_indexes.py  ab1_merge_heads_add_missing_indexes.py  ac1_add_portfolio_horizon_tax_type.py  ac1_positions_unique_constraint.py  ac1_remove_deposit_trigger.py  ad1_add_stock_alert_ticker_index.py  (+57 more)
backend/app/: config.py  constants.py  database.py  enums.py  exceptions.py  limiter.py  main.py  redis_client.py  scheduler.py
backend/app/api/: deps.py
backend/app/core/: cache_store.py  config.py  database.py
backend/app/jobs/: _job_helpers.py  asset_sync.py  cache_sweep.py  dca_auto_buy.py  deposit_monitor.py  economic_indicator_sync.py  exchange_rate_alert.py  goal_achievement.py  market_signal_alert.py  market_signal_daily_digest.py  monthly_report.py  price_publisher.py  rebalancing_alert.py  rebalancing_auto_execution.py  rebalancing_plan_buy_execution.py  rebalancing_plan_sell_expiry.py  recommendation_drift_alert.py  stock_price_alert.py  token_refresh.py  year_end_tax_reminder.py
backend/app/kis/: auth.py  balance.py  client.py  constants.py  domestic_quote.py  order.py  overseas_quote.py
backend/app/kiwoom/: auth.py  balance.py  client.py  constants.py  order.py
backend/app/models/: __init__.py  alert.py  app_state.py  asset.py  backtest.py  indicator_subscription.py  portfolio.py  rebalancing.py  rebalancing_plan.py  security.py  token.py  user.py
backend/app/providers/: _error_mapping.py  _overseas_cache.py  _overseas_name_enrichment.py  _retry.py  _token_cache.py  base.py  http_client.py  kis_provider.py  kiwoom_provider.py  manual_provider.py  openbanking.py  openbanking_provider.py
backend/app/schemas/: _validators.py  ai_analysis.py  asset.py  auth.py  backtest.py  dashboard.py  invest.py  portfolio.py  rebalancing.py  service_dtypes.py  transaction.py
backend/app/services/: _account_queries.py  _kis_order_executor.py  _kiwoom_order_executor.py  _order_executor_common.py  _portfolio_queries.py  _position_queries.py  _rebalancing_alert_queries.py  _settings_queries.py  _snapshot_queries.py  ai_analysis_service.py  alert_calculator.py  alert_repository.py  alert_service.py  asset_aggregator.py  asset_credential_service.py  asset_service.py  auth_service.py  backtest_metrics.py  backtest_service.py  correlation_service.py  (+52 more)
backend/scripts/: check_jwt_secret.py  migrate_to_supabase.py  test_kiwoom.py
backend/tests/: conftest.py  test_alert_calculator.py  test_alert_jobs.py  test_alert_repository.py  test_alert_service.py  test_alert_service_extended.py  test_alert_service_schedule.py  test_alerts_api.py  test_api_cache_hit_paths.py  test_api_deps.py  test_api_routes.py  test_asset_aggregator.py  test_asset_aggregator_extended.py  test_asset_service.py  test_asset_service_extended.py  test_asset_sync_job.py  test_assets_api.py  test_assets_api_extended.py  test_auth_api.py  test_auth_service.py  test_backtest_api.py  test_backtest_extended.py  test_backtest_metrics.py  test_backtest_service.py  test_broker_balance_service.py  test_build_portfolio_overview.py  test_cache_store.py  test_circuit_breaker.py  test_composition_calculator.py  test_config.py  test_credential_service.py  test_currency_and_cache_keys.py  test_dart_api.py  test_dart_service.py  test_dashboard_api.py  test_dca_job.py  test_dca_service.py  test_deposit_monitor.py  test_dividend_aggregator.py  test_dividend_calculator.py  (+104 more)
(+581 files in other folders)
