[project]
name = "growlio"
version = "0.1.0"
description = "Growlio — 자산관리 + 포트폴리오 자동매매 앱"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Auth
    "PyJWT>=2.8.0",
    "pydantic[email]>=2.7.0",   # EmailStr 사용을 위한 email-validator 포함
    "python-multipart>=0.0.9",
    # Encryption (KIS credentials)
    "cryptography>=42.0.0",
    # Logging
    "structlog>=24.0.0",
    # Date utils
    "python-dateutil>=2.9.0",
    # Korean holiday detection
    "holidays>=0.46",
    # Stock price data (API 키 불필요 — Yahoo Finance)
    "yfinance>=0.2.40",
    # KRX 공식 데이터 (ETF 분배금 이력 조회 — 인증 불필요)
    "pykrx>=1.0.47",
    # ETF 분배금/배당율 fallback 데이터 소스 (네이버 금융 기반, import: FinanceDataReader)
    "finance-datareader>=0.9",
    # 비동기 SMTP (이메일 알림)
    "aiosmtplib>=3.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Retry logic for external APIs
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E712",   # SQLAlchemy boolean 비교 (Model.is_active == True) 허용
    "B008",   # FastAPI Depends() 호출 허용
    "SIM108", # 삼항 연산자 강제 변환 비활성화
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]
