[project]
name = "growlio"
version = "0.1.0"
description = "Growlio — 자산관리 + 포트폴리오 자동매매 앱"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Auth
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    # Encryption (KIS credentials)
    "cryptography>=42.0.0",
    # Logging
    "structlog>=24.0.0",
    # Date utils
    "python-dateutil>=2.9.0",
    # Stock price data (API 키 불필요 — Yahoo Finance)
    "yfinance>=0.2.66",
    # KRX 공식 데이터 (ETF 분배금 이력 조회 — 인증 불필요)
    "pykrx>=1.0.47,<2.0.0",
    # ETF 분배금/배당율 fallback 데이터 소스 (네이버 금융 기반, import: FinanceDataReader)
    "finance-datareader>=0.9,<1.0",
    # 비동기 SMTP (이메일 알림)
    "aiosmtplib>=3.0.0",
    # Rate limiting
    "slowapi>=0.1.9,<0.2.0",
    # Retry logic for external APIs
    "tenacity>=8.3.0,<9.0.0",
    # Error tracking
    "sentry-sdk[fastapi]>=2.0.0",
    # Metrics
    "prometheus-fastapi-instrumentator>=6.1.0",
    # FCM 푸시 알림 (선택적 — FIREBASE_CREDENTIALS_JSON 환경변수 설정 시 활성화)
    "firebase-admin>=6.5.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --cov=app --cov-fail-under=80 --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "app/main.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "ASYNC", "PT"]
ignore = [
    "E712",   # SQLAlchemy boolean 비교 (Model.is_active == True) 허용
    "B008",   # FastAPI Depends() 호출 허용
    "SIM108", # 삼항 연산자 강제 변환 비활성화
    "PT001",  # pytest fixture 괄호 스타일 유연하게
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

# 점진적 strict 옵션 (전체 적용 — 사이드이펙트 적은 항목만)
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# 타입이 잘 정의된 모듈에 선택적 strict 적용
[[tool.mypy.overrides]]
module = ["app.utils.*", "app.schemas.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

